--- a/index.html
+++ b/index.html
@@ -1,79 +1,10 @@
 <!DOCTYPE html>
 <html>
+<head>
+	<script src="slider.js" async></script>
+</head>
 <body>
-
-<canvas id="myCanvas" width="600" height="600" style="border:1px solid #d3d3d3;"></canvas>
-
-<script>
-var c = document.getElementById("myCanvas");
-var context = c.getContext("2d");
-var dimension = 600;
-var sectionLength = dimension/3;
-
-var img = new Image();
-img.addEventListener("load", function() {
-  //context.drawImage(img,0,0); 
-  
-  context.drawImage(img, 0, 0, 600, 400, 0, 0, 600, 400);
-  
-  context.drawImage(img, 0, 400, 400, 200, 0, 400, 400, 200);
-  
-  for (var i=1; i<=2; i++) {
-    //draw vertical lines
-    context.moveTo(sectionLength*i, 0);
-    context.lineTo(sectionLength*i, 600);
-    context.stroke();
-    
-    //draw horizontal lines
-    context.moveTo(0, sectionLength*i);
-    context.lineTo(600, sectionLength*i);
-    context.stroke();
-  }
-}, false);
-img.src = "album.jpg";
-
-c.addEventListener('click', function(event) {
-  var x = event.pageX - c.offsetLeft;
-  var y = event.pageY - c.offsetTop;
-  console.log("-----CLICK-----");
-  console.log("Clicked X Coord: " + x);
-  console.log("Clicked Y Coord: " + y);
-  if (y < 200) {
-    if (x < 200) {
-      console.log("SECTION 1");
-      context.clearRect(0,0,200,200);
-    } else if (x > 200 && x < 400) {
-      console.log("SECTION 2");
-      context.clearRect(200,0,200,200);
-    } else if (x > 400) {
-      console.log("SECTION 3");
-      context.clearRect(400,0,200,200);
-    }
-  } else if (y > 200 && y < 400) {
-    if (x < 200) {
-      console.log("SECTION 4");
-      context.clearRect(0,200,200,200);
-    } else if (x > 200 && x < 400) {
-      console.log("SECTION 5");
-      context.clearRect(200,200,200,200);
-    } else if (x > 400) {
-      console.log("SECTION 6");
-      context.clearRect(400,200,200,200);
-    }
-  } else if (y > 400) {
-    if (x < 200) {
-      console.log("SECTION 7");
-      context.clearRect(0,400,200,200);
-    } else if (x > 200 && x < 400) {
-      console.log("SECTION 8");
-      context.clearRect(200,400,200,200);
-    } else if (x > 400) {
-      console.log("SECTION 9");
-      context.clearRect(400,400,200,200);
-    }
-  }
-}, false);
-</script>
-
+	<canvas id="myCanvas" width="600" height="600" style="border:1px solid #d3d3d3;"></canvas>
+	<input type="button" value="tester" onclick="drawBoard()" /> 
 </body>
 </html>
