split helper functions into own file and removed logging

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<script src="slider.js" async></script>
+	<script src="helper.js" async></script>
 </head>
 <body>
 	<canvas id="myCanvas" width="600" height="600" style="border:1px solid #d3d3d3;"></canvas>
